--- a/index.html
+++ b/index.html
@@ -1,15 +1,34 @@
-CTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Software Services</title>
     <link rel="stylesheet" href="src/style.css">
+  <!-- Font Awesome for Hamburger Icon -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to Our Software Services</h1>
+      <div class="container">
+        <div class="logo">
+            <h1>The ALX Buddy</h1>
+        </div>
+        <nav>
+            <ul class="menu" id="menu">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+ 	<div class="hamburger" id="hamburger">
+                    <i class="fas fa-bars"></i>
+        </div>
+        </nav>
     </header>
+    <section id="home">
+        <h2>Welcome to Our Software Services</h2>
+    </section>
     <section id="services">
         <h2>Our Services</h2>
         <ul>
@@ -18,10 +37,20 @@ CTYPE html>
             <li>Support & Maintenance</li>
         </ul>
     </section>
+    <section id="about">
+        <h2>About Us</h2>
+        <p>We are a leading software services company dedicated to delivering innovative solutions.</p>
+    </section>
+
+    <section id="contact">
+        <h2>Contact Us</h2>
+        <p>Feel free to reach out via email at contact@yourcompany.com or call us at (123) 456-7890.</p>
+    </section>
+
     <footer>
-        <p>© 2024 Your Company Name. All Rights Reserved.</p>
+        <p>© 2024 The ALX Buddy. All Rights Reserved.</p>
     </footer>
+
     <script src="src/app.js"></script>
 </body>
 </html>
-
