--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Feel free to reach out via email at contact@yourcompany.com or call us at (123) 456-7890.</p>
+        <p>Feel free to reach out via email at contact@thealxbuddy.com or call us at +20 1111666999.</p>
     </section>
 
     <footer>
