--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Software Services</title>
     <link rel="stylesheet" href="src/style.css">
   <!-- Font Awesome for Hamburger Icon -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -29,14 +29,43 @@
     <section id="home">
         <h2>Welcome to Our Software Services</h2>
     </section>
+
     <section id="services">
         <h2>Our Services</h2>
         <ul>
-            <li>Custom Software Development</li>
-            <li>Consulting</li>
-            <li>Support & Maintenance</li>
+            <li>
+                <i class="fas fa-laptop-code"></i>  <!-- Web & Mobile Development Icon -->
+                <strong>Web & Mobile Development</strong>
+                <p>We consider websites and mobile apps valuable digital assets that are investments for your brand and important touchpoints with your clients.</p>
+            </li>
+            <li>
+                <i class="fas fa-paint-brush"></i>  <!-- Creative Design & Branding Icon -->
+                <strong>Creative Design & Branding</strong>
+                <p>Branding serves as the communication channel for a brand, conveying its unique identity and positioning within the minds of its target audience.</p>
+            </li>
+            <li>
+                <i class="fas fa-sitemap"></i>  <!-- Branding Process Icon -->
+                <strong>Branding Process</strong>
+                <p>The essential components of brand personas are the who, what, how, and why. Brand architecture and key messages play a crucial role in shaping these personas.</p>
+            </li>
+            <li>
+                <i class="fas fa-database"></i>  <!-- Digital Asset Management Icon -->
+                <strong>Digital Asset Management</strong>
+                <p>Our conviction that the brand should consistently maintain a close connection with its customers ignites our immense enthusiasm when it comes to overseeing your digital resources.</p>
+            </li>
+            <li>
+                <i class="fas fa-cogs"></i>  <!-- Product Development Icon -->
+                <strong>Product Development</strong>
+                <p>Develop state-of-art software products that outperform in the market and help businesses achieve measurable business outcomes.</p>
+            </li>
+            <li>
+                <i class="fas fa-vr-cardboard"></i>  <!-- Virtual & Augmented Reality Icon -->
+                <strong>Virtual & Augmented Reality</strong>
+                <p>The future is now, VR and AR are the future. It is time to implement these technologies in an efficient and useful way to help businesses grow.</p>
+            </li>
         </ul>
     </section>
+    
     <section id="about">
         <h2>About Us</h2>
         <p>We are a leading software services company dedicated to delivering innovative solutions.</p>
@@ -44,8 +73,38 @@
 
     <section id="contact">
         <h2>Contact Us</h2>
-        <p>Feel free to reach out via email at contact@thealxbuddy.com or call us at +20 1111666999.</p>
-    </section>
+        <div class="contact-container">
+            <form id="contact-form" class="contact-form">
+                <div class="form-group">
+                    <input type="text" id="name" name="name" placeholder="Your Name" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" id="email" name="email" placeholder="Your Email" required>
+                </div>
+                <div class="form-group phone-group">
+                    <select id="country-code" name="country-code" required>
+                        <option value="+20" selected>+20 (Egypt)</option>
+                        <option value="+1">+1 (USA)</option>
+                        <option value="+44">+44 (UK)</option>
+                        <!-- Add more options as needed -->
+                    </select>
+                    <input type="tel" id="phone" name="phone" placeholder="Your Phone Number" required pattern="\d{10,15}">
+                </div>
+                <div class="form-group">
+                    <textarea id="message" name="message" placeholder="Your Message" rows="5"></textarea>
+                </div>
+                <button type="submit">Send Message</button>
+            </form>
+            <div class="social-media">
+                <a href="https://wa.me/201066669999" target="_blank"><i class="fab fa-whatsapp"></i></a>
+                <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://x.com" target="_blank"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://youtube.com" target="_blank"><i class="fab fa-youtube"></i></a>
+            </div>
+        </div>
+    </section>    
 
     <footer>
         <p>© 2024 The ALX Buddy. All Rights Reserved.</p>
